# tauri-area

./: .gitignore  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  model.rs
src/components/: HelloWorld.vue
