[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.12", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.0.0-rc.14", features = ["api-all"] }
tokio = { version = "1.13.0", features = ["full"] }
lazy_static = "1.4.0"
# add this library,and cargo install
# bson (required)
rbson = "2.0"

# logging lib(required)
log = "0.4"
fast_log = "1.3"

# rbatis (required) default is all-database+runtime-async-std-rustls
rbatis = { version = "3.0", default-features = false, features = ["sqlite", "runtime-tokio-rustls"] }
#rbatis = { version = "3.0", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "debug_mode"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
